[package]
name = "timezones"
version = "0.1.0"
authors = ["Lucas Marques <lucaskauz@gmail.com>"]
edition = "2018"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
chrono = { version = "0.4", features = ["wasmbind", "js-sys"] }
